<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CS9002</string>
    <string name="hello_world">Hello world!</string>
	<string name="login">登录</string>
    <string name="login_weme_user">注册 云端账户</string>
    <string name="account_or_password_not_null">帐号和密码不能为空</string>
    <string name="login_fail">登录失败</string>
    <string name="login_success">登录成功</string>
    
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_devices">BLE Device Scan</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>

    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>

    <!-- Menu items -->
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    <string name="menu_refresh">Refresh</string>
    
    <string name="add_values">Add values to the chart</string>   
    <string name="x">X</string>    
	<string name="y">Y</string>
	<string name="add">Add</string>
	<string name="new_series">New series</string> 
	
	<!-- measure manage list -->
	<string name="DCvoltage">直流电压</string>
    <string name="ACvoltage">交流电压</string>
    <string name="DCcurrent">直流电流</string>
    <string name="ACcurrent">交流电流</string>
    <string name="DCtime">直流时间</string>
    <string name="ACtime">交流时间</string>
	
    <string name="user_contract">用户协议</string>
    <string name="name_not_empty">用户名不能为空</string>
    <string name="password_long_6">密码至少6位</string>
    <string name="password_not_equal">密码不一致</string>
    <string name="network_error">网络异常</string>
    
    
    <array name="paralist1">
        <item>VAC</item>
        <item>VDC</item>
        <item>IAC</item>
        <item>IDC</item>
    </array>
    
</resources>
